# T2C_SpecKit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  pyproject.toml
src/rpa_speckit/: __init__.py  cli.py
src/rpa_speckit/commands/: __init__.py  init.py
src/rpa_speckit/memory/: __init__.py  constitution.md  system_complexity.json
src/rpa_speckit/templates/: __init__.py  business-rules-template.md  constitution.md  selectors-template.md  spec-template.md  tasks-template.md  tests-template.md
src/rpa_speckit/templates/code/: bot.py.template  readme.md.template  requirements.txt.template  setup.py.template  t2c_close_apps.py.template  t2c_init_apps.py.template  t2c_process.py.template
src/rpa_speckit/utils/: __init__.py  ddp_extractor.py  framework_generator.py
